--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
 *{
-  background: red;
+  background: rgb(5, 95, 128);
+}
+h1,p{
+  text-align: center;
+  border: 2px solid lawngreen;
+  border-radius: 8px;
+
+}
+.btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1em;
+  padding: 30px;
+}
+.btn button{
+  border: 2px solid crimson;
+  border-radius: 50px;
+  color: white;
+  font-size: 1.2em;
+  padding: 10px;
+  cursor: pointer;
+  box-shadow: 2px 0.5px 10px crimson;
+  font-weight: bold
+
+}
+.btn button:hover{
+  background-color: crimson;
+  color: black;
+  border: 2px solid lavender;
 }
